# sandbox-sb3

./: .dockerignore  .gitignore  .skyignore  AGENTS.md  BASELINE.md  EXPERIMENT_MEMORY.md  GOAL.md  INSTANCES.md  METRICS.md  README.md  pyproject.toml
.codex/skills/autoresearch/: SKILL.md
.codex/skills/flush-eval/: SKILL.md
.codex/skills/skypilot-mario-monitor/: SKILL.md
.codex/skills/upload-checkpoint/: SKILL.md
.codex/skills/upload-youtube-video/: SKILL.md
.github/workflows/: rlab-train-image.yml
configs/: ppo_1m.txt
containers/train/: Dockerfile  README.md  entrypoint.sh  smoke.py
experiments/: README.md  fleet.json  fleet.yaml  instances.json  instances.yaml
experiments/benchmarks/: README.md  baselines.yaml
experiments/benchmarks/profiles/: artifact-storage-smoke-mario-l11.yaml  container-smoke-train-image.yaml  eval-contract-mario-l11.yaml  fleet-capacity-rtx4090.yaml  local-smoke-mario-l11.yaml  ppo-loop-throughput-mario-l11.yaml  retro-env-throughput-mario-l11.yaml
experiments/envs/stable-retro-turbo/: super-mario-bros-nes-v0.yaml
experiments/goals/Level1-1/: README.md  best.yml  goal.yaml
experiments/goals/Level1-2/: README.md  best.yml  goal.yaml
experiments/goals/Level1-3/: README.md  best.yml  goal.yaml
experiments/goals/Level1-4/: README.md  best.yml  goal.yaml
experiments/goals/Level2-1/: README.md  best.yml  goal.yaml
experiments/goals/Levels_2_d25102/: README.md  best.yml  goal.yaml
experiments/goals/SuperMarioBros-Nes-v0/: _base.yaml
experiments/history/: BASELINE_2.md  BASELINE_3.md  EXPERIMENT_MEMORY.md  README.md  SAMPLE_EFFICIENCY_ABLATIONS.md
experiments/launches/: README.md  rlab_rtx4090.example.json  stable_retro_rtx4090.example.json
experiments/policies/: capacity_policy.json  capacity_policy.yaml
experiments/recipes/: README.md  supermariobros_nes_level1_winning_recipe.md
experiments/runner_profiles/: README.md  mario_ppo_post19_task_conditioned_rtx4090.example.json  mario_ppo_post20_task_conditioned_rtx4090.example.json
experiments/specs/: README.md
scripts/: benchmark_env_sps.py  benchmark_retro_env_diagnostics.py  create_level1_2_wandb_report.py  create_mario_wandb_dashboard.py  create_retro_wandb_dashboard.py  distill_mario_level1_policies.py  eval_wandb_checkpoints.py  hash_sb3_checkpoints.py  import_roms.py  play_wandb_artifact.py  populate_checkpoint_candidates.py  record_best_episode.py  setup_neon_eval_queue.py  setup_r2_bucket.py  stable_retro_skypilot.py  upload_youtube_video.py
scripts/audits/: audit_post10_seed_and_training_determinism.py  audit_retro_observation_aliasing.py  audit_retro_version_behavior.py  probe_cuda_concurrent_determinism.py  probe_wandb_rng_state.py
scripts/benchmarks/: benchmark_env_sps.py  benchmark_retro_env_diagnostics.py
src/mario_ppo/: __init__.py  artifacts.py  callbacks.py  cli.py  env.py  eval_metrics.py  evaluate.py  modal_app.py  play.py  schedules.py  targets.py  train.py
src/rlab/: __init__.py  artifacts.py  benchmark.py  benchmark_profiles.py  callbacks.py  campaign.py  cli.py  cli_args.py  compute_cli.py  compute_targets.py  config_loader.py  config_validation.py  device.py  dotenv.py  env.py  env_config.py  env_config_aliases.py  env_identity.py  eval.py  eval_job_runner.py  eval_metrics.py  eval_runner.py  evaluate.py  fleet.py  job_queue.py  json_utils.py  main.py  metric_names.py  modal_app.py  modal_benchmarks.py  modal_core.py  modal_eval.py  modal_launch.py  modal_train.py  model_sources.py  play.py  promote.py  skypilot_cli.py  skypilot_launch.py  spec_schema.py  (+6 more)
src/rlab/monitoring/: __init__.py  (+2 more)
src/stable_retro_ppo/: __init__.py  artifacts.py  callbacks.py  campaign.py  cli.py  cli_args.py  env.py  env_config.py  eval_job_runner.py  eval_metrics.py  eval_profiles.py  eval_runner.py  evaluate.py  metric_names.py  modal_app.py  modal_benchmarks.py  modal_core.py  modal_eval.py  modal_train.py  play.py  skypilot_cli.py  skypilot_launch.py  targets.py  train.py  train_runner.py  video.py  wandb_artifacts.py  wandb_utils.py
tests/: test_benchmark_profiles.py  test_campaign_runner.py  test_config_loader.py  test_config_validation.py  test_core_helpers.py  test_fleet.py  test_job_queue_runner.py  test_monitoring.py  test_skypilot_launch.py  test_train.py
todo/: 01-modal-eval-secretless-deserialization.md  02-training-resume-trust-gate.md  03-modal-packaging-exclude-secrets.md  04-skypilot-yaml-shell-injection.md  05-youtube-oauth-file-permissions.md  06-run-name-path-traversal.md  07-monitor-api-auth-and-redaction.md  08-youtube-privacy-preservation.md  README.md
(+545 files in other folders)
