[project]
name = "stable-retro-ppo"
version = "0.1.0"
description = "PPO training scaffold for Stable Retro games with stable-retro-turbo"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "stable-retro-turbo==1.0.0.post12; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "stable-retro-turbo==1.0.0.post12; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "stable-baselines3[extra]>=2.3,<3",
    "torch==2.11.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "tensorboard>=2.16,<3",
    "wandb>=0.18,<0.23",
    "boto3>=1.34,<2",
]

[project.optional-dependencies]
modal = [
    "modal>=1.1,<2",
]

[project.scripts]
stable-retro-ppo-train = "stable_retro_ppo.train:main"
stable-retro-ppo-evaluate = "stable_retro_ppo.evaluate:main"
stable-retro-ppo-play = "stable_retro_ppo.play:main"
stable-retro-ppo-skypilot = "stable_retro_ppo.skypilot_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stable_retro_ppo"]

[tool.uv]
exclude-newer = "7 days"
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
constraint-dependencies = [
    "mistralai!=2.4.6",
    "guardrails-ai!=0.10.1",
]

[tool.uv.exclude-newer-package]
stable-retro-turbo = "2026-06-18T23:59:59Z"

[tool.ruff]
line-length = 100
target-version = "py314"

[dependency-groups]
dev = [
    "ruff>=0.15,<0.16",
    "skypilot[kubernetes]>=0.12.3,<0.13",
]
