[project]
name = "rlab"
version = "0.1.0"
description = "Generic reinforcement-learning lab for training and evaluating game agents"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "stable-retro-turbo==1.0.0.post21; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "stable-retro-turbo==1.0.0.post21; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "stable-baselines3[extra]>=2.3,<3",
    "torch==2.11.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "tensorboard>=2.16,<3",
    "wandb>=0.18,<0.23",
    "boto3>=1.34,<2",
    "psycopg2-binary>=2.9,<3",
    "pyyaml>=6,<7",
]

[project.scripts]
rlab = "rlab.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlab"]

[tool.uv]
exclude-newer = "7 days"
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
constraint-dependencies = [
    "mistralai!=2.4.6",
    "guardrails-ai!=0.10.1",
]

[tool.uv.exclude-newer-package]
stable-retro-turbo = "2026-06-26T00:00:00Z"

[tool.ruff]
line-length = 100
target-version = "py314"

[dependency-groups]
dev = [
    "ruff>=0.15,<0.16",
]
